# data-space-grid

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pages.yml
docs/: GUIDE_JA.md  coordination-viz.html  demand-viz.html  house-before-after.html  presentation.html  process-viz.html
docs/demos/: 01-unit-tests.tape  02-integration-tests.tape  03-contract-negotiation.tape  04-congestion-management.tape  05-auth-flow.tape  06-audit-trail.tape  07-catalog-flow.tape  08-anonymizer.tape  09-semantic-models.tape  10-policy-engine.tape  demo-congestion.tape  demo-grid-topology.tape  gen_concept_gifs.py  gen_slideshow.py
examples/: congestion_management_demo.py  grid_topology_demo.py
examples/output/: demo_audit.jsonl  grid_audit.jsonl
infrastructure/certs/: generate-dev-certs.sh
infrastructure/kafka/: topics.sh
infrastructure/keycloak/: realm-export.json
src/: __init__.py
src/catalog/: __init__.py  main.py  routes.py  schemas.py  store.py
src/connector/: __init__.py  audit.py  auth.py  catalog_client.py  contract.py  events.py  middleware.py  models.py  policy.py
src/participants/: __init__.py
src/participants/aggregator/: __init__.py  flexibility.py  main.py  publisher.py  routes.py  store.py
src/participants/dso/: __init__.py  main.py  publisher.py  routes.py  store.py
src/participants/prosumer/: __init__.py  anonymizer.py  consent.py  main.py  publisher.py  routes.py  store.py
src/semantic/: __init__.py  cim.py  consumer.py  iec61850.py  openadr.py
tests/: __init__.py  conftest.py
tests/integration/: test_audit_trail.py  test_auth_flow.py  test_catalog_flow.py  test_congestion_management.py  test_contract_negotiation.py
tests/unit/: test_anonymizer.py  test_audit.py  test_connector_models.py  test_contract.py  test_policy.py  test_semantic_models.py
